--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
 language: java
 dist: trusty
 
+before_install:
+  - rm -rf $HOME/.m2/repository/org/examples
+  - cp travis_settings.xml $HOME/.m2/settings.xml
+
 script:
 - mvn clean install
 
 deploy:
   provider: script
-  script: "mvn -s travis_settings.xml -DskipTests deploy"
+  script: "mvn deploy:deploy"
   on:
     branch: master
 
 before_cache:
-  - "rm -f $HOME/.m2/repository/org/examples"
+  - rm -rf $HOME/.m2/repository/org/examples
 cache:
   directories:
     - "$HOME/.m2/repository"
