--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - cp travis_settings.xml $HOME/.m2/settings.xml
 
 script:
-- mvn clean install
+  - mvn install
 
 deploy:
   provider: script
