--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.examples</groupId>
     <artifactId>ci-module1</artifactId>
-    <version>0.9.3-SNAPSHOT</version>
+    <version>0.9.4</version>
     <packaging>jar</packaging>
     <name>CI Module1</name>
 
