--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,17 @@ before_install:
 script:
   - mvn install
 
+before_cache:
+  - rm -rf $HOME/.m2/repository/org/examples
+cache:
+  directories:
+    - "$HOME/.m2/repository"
+
 deploy:
   provider: script
   script: "mvn deploy -DskipTests"
   on:
     branch: master
 
-before_cache:
-  - rm -rf $HOME/.m2/repository/org/examples
-cache:
-  directories:
-    - "$HOME/.m2/repository"
+after_deploy:
+  - [[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+ && $TRAVIS_BRANCH == "master" ]] ./travis_downstream_deploy.sh
