--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 
 before_install:
   - rm -rf $HOME/.m2/repository/org/examples
-  - cp travis_settings.xml $HOME/.m2/settings.xml
+  - cp .travis/travis_settings.xml $HOME/.m2/settings.xml
 
 script:
   - mvn install
@@ -21,4 +21,4 @@ deploy:
     branch: master
 
 after_deploy:
-  - [[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+ && $TRAVIS_BRANCH == "master" ]] ./travis_downstream_deploy.sh
+  - [[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+ && $TRAVIS_BRANCH == "master" ]] .travis/travis_downstream_deploy.sh
