--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <version>0.9.4</version>
     <packaging>jar</packaging>
     <name>CI Module1</name>
+    <description>Module1 of multi-module project</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
