--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ deploy:
   script: "mvn deploy -DskipTests"
   on:
     branch: master
+
+after_deploy:
+  - [[ "$TRAVIS_BRANCH" == "master" ]] && .travis/travis_downstream_deploy.sh
