--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   script: "mvn deploy -DskipTests"
   on:
     all_branches: true
-    condition: $TRAVIS_BRANCH == master
+    condition: $TRAVIS_BRANCH = master
 
 after_deploy:
   - chmod u+x .travis/travis_downstream_deploy.sh
