--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.examples</groupId>
     <artifactId>ci-module1</artifactId>
-    <version>0.9.13-SNAPSHOT</version>
+    <version>0.9.13</version>
     <packaging>jar</packaging>
     <name>CI Module1</name>
     <description>Module1 of multi-module project</description>
